fix consistency of heights in light and dark mode

--- a/desktop/src/main/java/haveno/desktop/haveno.css
+++ b/desktop/src/main/java/haveno/desktop/haveno.css
@@ -230,6 +230,7 @@
     -fx-padding: 7 14 7 14;
     -fx-background-radius: 999;
     -fx-border-radius: 999;
+    -fx-border-color: transparent;
 }
 
 .jfx-combo-box {
